    this is not really critical, because this information wasn't evaluated by RKWard until now
    anyway
  - for consistency, from now on <component> is never an empty node
  - rk.XML.pluginmap() will now move <dependencies> from <about> to a top level child node
    of plugin maps, with a warning
added:
  - new function rk.XML.optiondisplay()
  - new function rk.XML.optionset()
  - new function rk.XML.matrix()
  - new function rk.XML.dependencies()
  - new function rk.XML.dependency_check()
  - added options "dependencies", "namespace" and "priority" to rk.XML.pluginmap()
  - added option "dependencies" to rk.XML.component()
  - added "map" to rk.XML.require()

changes in version 0.06-1 (2012-11-08)
changed:
  - rk.plugin.skeleton(): "tests" will now ignore "overwrite" and not replace
    existing testsuite files
fixed:
  - dots will now be removed from pluginmap IDs
  - modifiers of "external" XML nodes will not be checked, since it can be
    all kinds of stuff

changes in version 0.05-8 (2012-09-30)
added:
  - new function rk.plotOptions() and class "rk.plot.opts" to simplify code
    generation for plots; this also caused changes in the internal workflow,
    especially for child.node() and rk.paste.JS()
changed:
  - rk.paste.JS.graph() also takes objects of class "rk.plot.opts"
  - rk.XML.embed() now supresses the label if "button=FALSE"

changes in version 0.05-7 (2012-09-29)
added:
  - new function rk.paste.JS.graph() to simplify JS code generation for plots

changes in version 0.05-6 (2012-05-10)
added:
  - rk.XML.wizard() and rk.XML.dialog() can now set the "recommended"
    attribute

changes in version 0.05-5 (2012-04-19)
added:
  - rk.plugin.skeleton() can now also generate initial ChangeLog files (but
    won't overwrite existing ones)
  - added a LICENSE file to the sources
  - sources were initially debianized by roxyPackage
changed:
  - if files are being skipped by rk.plugin.skeleton(), the corresponding