@@ -81,6 +81,7 @@ export(rk.XML.snippet)
 export(rk.XML.snippets)
 export(rk.XML.spinbox)
 export(rk.XML.stretch)
+export(rk.XML.switch)
 export(rk.XML.tabbook)
 export(rk.XML.text)
 export(rk.XML.vars)
