@@ -542,19 +542,22 @@ all.valid.children <- list(
 	components=c("component"),
 	context=c("menu", "!--"),
 	dialog=c("browser", "checkbox", "column", "copy",
-		"dropdown", "embed", "formula", "frame", "include", "input", "insert",
-		"preview", "radio", "row", "saveobject", "spinbox", "stretch", "tabbook",
+		"dropdown", "embed", "formula", "frame", "include", "input", "insert", "matrix",
+		"optionset", "preview", "radio", "row", "saveobject", "spinbox", "stretch", "tabbook",
 		"text", "varselector", "varslot", "!--"),
 	hierarchy=c("menu", "!--"),
-	logic=c("connect", "convert","include","insert","external","set","script"),
+	logic=c("connect", "convert", "dependency_check", "external", "include", "insert",
+		"script", "set", "switch"),
 	menu=c("entry", "menu", "!--"),
+	optionset=c("content", "logic", "optioncolumn"),
 	page=c("browser", "checkbox", "column", "copy",
-		"dropdown", "formula", "frame", "input", "page", "radio", "row", "saveobject",
-		"spinbox", "stretch", "tabbook", "text", "varselector", "varslot", "!--"),
+		"dropdown", "formula", "frame", "input", "matrix", "optionset", "page", "radio",
+		"row", "saveobject", "spinbox", "stretch", "tabbook", "text", "varselector",
+		"varslot", "!--"),
 	settings=c("setting", "caption", "!--"),
 	wizard=c("browser", "checkbox", "column", "copy",
-		"dropdown", "embed", "formula", "frame", "include", "input", "insert",
-		"page", "preview", "radio", "row", "saveobject", "spinbox", "stretch",
+		"dropdown", "embed", "formula", "frame", "include", "input", "insert", "matrix",
+		"optionset", "page", "preview", "radio", "row", "saveobject", "spinbox", "stretch",
 		"tabbook", "text", "varselector", "varslot", "!--")
 ) ## end list with valid child nodes
 
