@@ -14,7 +14,7 @@
 #' @export
 #' @seealso
 #'		\code{\link[rkwarddev:rk.XML.components]{rk.XML.components}},
-#'		\code{\link[XiMpLe:rk.XML.dependencies]{rk.XML.dependencies}},
+#'		\code{\link[rkwarddev:rk.XML.dependencies]{rk.XML.dependencies}},
 #'		and the \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 #' @examples
 #' test.component <- rk.XML.component("My GUI dialog", "plugins/MyGUIdialog.xml")
