@@ -38,6 +38,7 @@
 }
 \examples{
 dependency_check.node <- rk.XML.dependency_check(
+	id.name="dep_check",
 	dependencies=list(
 		rkward.min="0.5.3",
 		rkward.max="",
